name:                wyas
version:             0.1.0.0
synopsis:            Write yourself a Scheme in 48 hours (or so)
description:         Please see README.md
homepage:            https://github.com/maggy96/haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Magnus Görlitz
copyright:           2016 Magnus Görlitz
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib,
                       Parser
  build-depends:       base >= 4.7 && < 5,
                       parsec
  default-language:    Haskell2010

executable wyas-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , wyas
  default-language:    Haskell2010

test-suite wyas-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , wyas
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/maggy96/wyas
